[package]
name = "YooOs"
author = "YaoJunjie email:345024941@qq.com"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/Dr-TSNG/riscv" }
buddy_system_allocator = "0.11.0"
spin = '0.9.8'

[profile.release]
debug = true
