[package]
name = "YooOs"
author = "YaoJunjie email:345024941@qq.com"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
riscv = { git = "https://github.com/Dr-TSNG/riscv" }
buddy_system_allocator = "0.11.0"
spin = '0.9.8'
async-task = { version = "4.7", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
bitflags = "2.6.0"

[profile.release]
debug = true
